--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Rey Villena Jr. | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="[Rey Villena Jr.] | Developer" />
 
     <link
       rel="stylesheet"
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Rey Villena Jr.</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Fullstack Developer you need.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Employ Me</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile.png"
                 alt="Profile Image"
               />
             </div>
@@ -79,18 +79,21 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                <!-- This is where you can describe about yourself. The more you
+                describe about yourself, the more chances you can! -->
+                Hello there! I'm a passionate Fullstack Developer with a strong background in crafting innovative and user-friendly web applications. With extensive experience in both front-end and back-end development, I thrive on turning ideas into robust, scalable, and efficient digital solutions. <br>
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                <!-- Extra Information about you! like hobbies and your goals. -->
+                My main passion is coding but I'm also a prolific musician that specializes in fingerstyle technique with acoustic guitar, piano, violin, & etc. <br><br>
+                I was born in Manila, Philippines and migrated to Canada at the age of 18. I came from a broken family and have the hunger to succeed in anything that I pursue.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/resumepersonal.pdf"
                 >
                   View Resume
                 </a>
@@ -112,7 +115,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -153,7 +156,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/robofriends.png"
                     />
                   </div>
                 </a>
@@ -166,7 +169,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Background Generator</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -180,7 +183,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://cssgradientbg.netlify.app/"
                 >
                   See Live
                 </a>
@@ -188,7 +191,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/reyvillenajr/background-generator"
                 >
                   Source Code
                 </a>
@@ -207,7 +210,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/backgroundgen.png"
                     />
                   </div>
                 </a>
@@ -279,13 +282,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">[Contact Us Here]</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:example@email.com"
-            >Call to Action</a
+            >Inquire Here</a
           >
         </div>
       </div>
@@ -299,13 +302,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/reyvillenajr" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -314,14 +317,14 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
+          © 2023 - All Rights Reserved.
+          <a rel="noreferrer" href="https://github.com/reyvillenajr" target="_blank"
+            >RVJR Ventures Inc.</a
           >
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
+        <!-- <p class="mt-3 pt-3">
           <a
             rel="noreferrer"
             class="github-button"
@@ -344,7 +347,7 @@
           >
         </p>
       </div>
-    </footer>
+    </footer> -->
     <!-- /END Footer Section -->
 
     <script defer type="module" src="index.js"></script>
