--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Extra Information about you! like hobbies and your goals. -->
-                My main passion is coding but I'm also a prolific coder & a former musician that specializes in fingerstyle technique with acoustic guitar, piano, violin, & etc. <br><br>
+                My main passion is Entrepreneurship but I'm also a prolific coder & a former musician that specializes in fingerstyle technique with acoustic guitar, piano, violin, & etc. <br><br>
                 I was born in Manila, Philippines and migrated to Canada at the age of 18. I came from a broken family and have the hunger to succeed in anything that I pursue.
               </p>
               <span class="d-flex mt-3">
