--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://cssgradientbg.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
