--- a/src/index.html
+++ b/src/index.html
@@ -81,12 +81,12 @@
               <p class="about-wrapper__info-text">
                 <!-- This is where you can describe about yourself. The more you
                 describe about yourself, the more chances you can! -->
-                Hello there! I'm a passionate Fullstack Developer with a strong background in crafting innovative and user-friendly web applications. With extensive experience in both front-end and back-end development, I thrive on turning ideas into robust, scalable, and efficient digital solutions. <br>
+                Hello, my name is Rey Villena Jr. I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Software Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
+                I have a proven track record of creating real-world applications & websites using various programming languages. These experiences have honed my ability to solve bugs & codes that are critical in order to run a business or organization. I am constantly seeking opportunities to enhance my skills and stay updated with the latest trends and advancements in my field. I believe in the power of continuous learning and strive to grow both professionally and personally. <br><br>
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Extra Information about you! like hobbies and your goals. -->
-                My main passion is Entrepreneurship but I'm also a prolific coder & a former musician that specializes in fingerstyle technique with acoustic guitar, piano, violin, & etc. <br><br>
-                I was born in Manila, Philippines and migrated to Canada at the age of 18. I came from a broken family and have the hunger to succeed in anything that I pursue.
+                Outside of my professional pursuits, I enjoy playing instruments like guitar, piano, violin, etc. & have fun activities like travelling, working out inside my home gym, & going out with close friends & family to the beach or campsites. These activities not only provide me with a well-deserved break but also contribute to my creativity and problem-solving abilities. I am an excellent communicator and value teamwork, as I firmly believe that the best outcomes are achieved through collaboration and open dialogue. I am excited about the future and the possibilities that lie ahead, and I am eager to make meaningful contributions in my field and positively impact the lives of others.
               </p>
               <span class="d-flex mt-3">
                 <a
