added robofriends live & source code

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://reyvillenajr.github.io/robofriends/"
                 >
                   See Live
                 </a>
@@ -137,7 +137,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/reyvillenajr/robofriends"
                 >
                   Source Code
                 </a>
