--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                   </p>
                 </div>
                 <a
-                  rel="noreferrer"
+                  rel="noopener"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="https://reyvillenajr.github.io/robofriends/"
@@ -134,7 +134,7 @@
                   See Live
                 </a>
                 <a
-                  rel="noreferrer"
+                  rel="noopener"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/reyvillenajr/robofriends"
@@ -180,7 +180,7 @@
                   </p>
                 </div>
                 <a
-                  rel="noreferrer"
+                  rel="noopener"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="https://cssgradientbg.netlify.app/"
@@ -188,7 +188,7 @@
                   See Live
                 </a>
                 <a
-                  rel="noreferrer"
+                  rel="noopener"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/reyvillenajr/background-generator"
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://cssgradientbg.netlify.app/" target="_blank">
+                <a rel="noopener" href="https://cssgradientbg.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -298,17 +298,17 @@
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
+        <a rel="noopener noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
+          <a rel="noopener noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
+          <a rel="noopener noreferrer" "noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="https://github.com/reyvillenajr" target="_blank">
+          <a rel="noopener noreferrer", "noreferrer" href="https://github.com/reyvillenajr" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -318,7 +318,7 @@
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
           © 2023 - All Rights Reserved.
-          <a rel="noreferrer" href="https://github.com/reyvillenajr" target="_blank"
+          <a rel="noopener noreferrer", "noreferrer" href="https://github.com/reyvillenajr" target="_blank"
             >RVJR Ventures Inc.</a
           >
         </p>
