--- a/src/index.html
+++ b/src/index.html
@@ -305,10 +305,10 @@
           <a rel="noopener noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noopener noreferrer" "noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
+          <a rel="noopener noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noopener noreferrer", "noreferrer" href="https://github.com/reyvillenajr" target="_blank">
+          <a rel="noopener noreferrer" href="https://github.com/reyvillenajr" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -318,7 +318,7 @@
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
           © 2023 - All Rights Reserved.
-          <a rel="noopener noreferrer", "noreferrer" href="https://github.com/reyvillenajr" target="_blank"
+          <a rel="noopener noreferrer" href="https://github.com/reyvillenajr" target="_blank"
             >RVJR Ventures Inc.</a
           >
         </p>
