--- a/src/index.html
+++ b/src/index.html
@@ -303,13 +303,13 @@
         </a>
         <div class="social-links">
           <a rel="noopener noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
-            <i class="fa fa-twitter fa-inverse">Twitter</i>
+            <i class="fa fa-twitter fa-inverse" aria-hidden="true">Twitter</i>
           </a>
           <a rel="noopener noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
-            <i class="fa fa-linkedin fa-inverse">LinkedIn</i>
+            <i class="fa fa-linkedin fa-inverse" aria-hidden="true">LinkedIn</i>
           </a>
           <a rel="noopener noreferrer" href="https://github.com/reyvillenajr" target="_blank">
-            <i class="fa fa-github fa-inverse">Github</i>
+            <i class="fa fa-github fa-inverse" aria-hidden="true">Github</i>
           </a>
         </div>
 
