--- a/src/index.html
+++ b/src/index.html
@@ -303,13 +303,13 @@
         </a>
         <div class="social-links">
           <a rel="noopener noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
-            <i class="fa fa-twitter fa-inverse" >T</i>
+            <i class="fa fa-twitter fa-inverse" ></i>
           </a>
           <a rel="noopener noreferrer" href="https://www.linkedin.com/in/reyvillena/" target="_blank">
-            <i class="fa fa-linkedin fa-inverse" >L</i>
+            <i class="fa fa-linkedin fa-inverse" ></i>
           </a>
           <a rel="noopener noreferrer" href="https://github.com/reyvillenajr" target="_blank">
-            <i class="fa fa-github fa-inverse" >GH</i>
+            <i class="fa fa-github fa-inverse" ></i>
           </a>
         </div>
 
