--- a/src/index.html
+++ b/src/index.html
@@ -299,7 +299,7 @@
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a rel="noopener noreferrer" href="#top" class="back-to-top">
-          <i class="fa fa-angle-up fa-2x">Top</i>
+          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
           <a rel="noopener noreferrer" href="https://twitter.com/Metaryzen" target="_blank">
