updated resume link

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resumepersonal.pdf"
+                  href="assets/resume.pdf"
                 >
                   View Resume
                 </a>
