updated hero section

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,11 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Rey Villena Jr.</span>
           <br />
-          I'm the Fullstack Developer you need.
+          I'm the Fullstack Engineer you need.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Employ Me</a
+            >Know more...</a
           >
         </p>
       </div>
