updated index.html & simplefolio

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                   </p>
                 </div>
                 <a
-                  rel="noopener"
+                  rel="noopener noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="https://reyvillenajr.github.io/robofriends/"
@@ -134,7 +134,7 @@
                   See Live
                 </a>
                 <a
-                  rel="noopener"
+                  rel="noopener noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/reyvillenajr/robofriends"
@@ -180,7 +180,7 @@
                   </p>
                 </div>
                 <a
-                  rel="noopener"
+                  rel="noopener noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="https://cssgradientbg.netlify.app/"
@@ -188,7 +188,7 @@
                   See Live
                 </a>
                 <a
-                  rel="noopener"
+                  rel="noopener noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/reyvillenajr/background-generator"
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noopener" href="https://cssgradientbg.netlify.app/" target="_blank">
+                <a rel="noopener noreferrer" href="https://cssgradientbg.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
