--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/Logo.png" />
 
     <!-- Todo: put here your site title -->
-    <title>Rey Villena Jr. | Developer</title>
+    <title>Rey Villena Jr. | Fullstack Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,7 +46,7 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Rey Villena Jr.</span>
+          Hi, my name is <span class="text-color-main">Rey.</span>
           <br />
           I'm the Fullstack Engineer you need.
         </h1>
@@ -118,11 +118,7 @@
                 <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Robofriends is a web app that let's you create a contact list of my friends.
                   </p>
                 </div>
                 <a
@@ -172,11 +168,7 @@
                 <h3 class="project-wrapper__text-title">Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Background Generator is a CSS linear-gradient generator to get a set of codes to implement the gradient that you wish.
                   </p>
                 </div>
                 <a
