--- a/src/index.html
+++ b/src/index.html
@@ -118,18 +118,18 @@
                 <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
-                    Robofriends React app is a web application designed to create an interactive and fun experience for users by allowing them to search and connect with virtual robot friends. The app is built using React, a popular JavaScript library for building user interfaces, and it leverages APIs to fetch and display robot data dynamically.<br>
+                    Robofriends React app is a web application designed to create an interactive and fun experience for users by allowing them to search and connect with virtual robot friends. The app is built using React, a popular JavaScript library for building user interfaces, and it leverages APIs to fetch and display robot data dynamically.<br><br>
                     Key features of the Robofriends React app:<br>
-                    1. User Authentication: The app may offer user authentication to allow users to create accounts and log in, enabling personalized interactions with the virtual robot friends.
-                    2. Robot Search: Users can search for robot friends using various criteria such as name, color, or special abilities. The app then retrieves and displays matching robot profiles from the database.
-                    3. Dynamic UI: The app uses React's state management to provide a seamless and responsive user interface. When users perform a search or interact with a robot friend, the app dynamically updates the display without requiring a page reload.
-                    4. Real-time Communication: Depending on the complexity of the app, it may incorporate real-time communication technologies like WebSocket to enable instant messaging between users and their robot friends.
-                    5. User Profile: Users might have their profiles where they can customize their avatar, set preferences, or manage their friend list.
-                    6. Robot Interaction: Users can interact with robot friends through a chat interface or by performing specific actions like sending virtual gifts, playing games, or sharing interesting facts.
-                    7. Responsive Design: The app is designed to work seamlessly across various devices, including desktops, tablets, and smartphones, offering an optimized user experience.
-                    8. Accessibility: Efforts are made to ensure the app adheres to accessibility standards, making it usable by people with disabilities.
-                    9. Robot Animation: To enhance the user experience, the app may include animated robot avatars that react to user interactions, making the interaction more engaging and entertaining.
-                    10. Backend Integration: The app may have a backend server that handles user authentication, database queries, and other server-side tasks to support the app's functionalities.<br>
+                    1. User Authentication: The app may offer user authentication to allow users to create accounts and log in, enabling personalized interactions with the virtual robot friends.<br>
+                    2. Robot Search: Users can search for robot friends using various criteria such as name, color, or special abilities. The app then retrieves and displays matching robot profiles from the database.<br>
+                    3. Dynamic UI: The app uses React's state management to provide a seamless and responsive user interface. When users perform a search or interact with a robot friend, the app dynamically updates the display without requiring a page reload.<br>
+                    4. Real-time Communication: Depending on the complexity of the app, it may incorporate real-time communication technologies like WebSocket to enable instant messaging between users and their robot friends.<br>
+                    5. User Profile: Users might have their profiles where they can customize their avatar, set preferences, or manage their friend list.<br>
+                    6. Robot Interaction: Users can interact with robot friends through a chat interface or by performing specific actions like sending virtual gifts, playing games, or sharing interesting facts.<br>
+                    7. Responsive Design: The app is designed to work seamlessly across various devices, including desktops, tablets, and smartphones, offering an optimized user experience.<br>
+                    8. Accessibility: Efforts are made to ensure the app adheres to accessibility standards, making it usable by people with disabilities.<br>
+                    9. Robot Animation: To enhance the user experience, the app may include animated robot avatars that react to user interactions, making the interaction more engaging and entertaining.<br>
+                    10. Backend Integration: The app may have a backend server that handles user authentication, database queries, and other server-side tasks to support the app's functionalities.<br><br>
                     Overall, the Robofriends React app aims to create an enjoyable and immersive environment where users can connect with virtual robot friends, fostering creativity, fun interactions, and a sense of companionship.
                   </p>
                 </div>
