--- a/src/index.html
+++ b/src/index.html
@@ -119,17 +119,6 @@
                 <div>
                   <p class="mb-4">
                     Robofriends React app is a web application designed to create an interactive and fun experience for users by allowing them to search and connect with virtual robot friends. The app is built using React, a popular JavaScript library for building user interfaces, and it leverages APIs to fetch and display robot data dynamically.<br><br>
-                    Key features of the Robofriends React app:<br>
-                    1. User Authentication: The app may offer user authentication to allow users to create accounts and log in, enabling personalized interactions with the virtual robot friends.<br>
-                    2. Robot Search: Users can search for robot friends using various criteria such as name, color, or special abilities. The app then retrieves and displays matching robot profiles from the database.<br>
-                    3. Dynamic UI: The app uses React's state management to provide a seamless and responsive user interface. When users perform a search or interact with a robot friend, the app dynamically updates the display without requiring a page reload.<br>
-                    4. Real-time Communication: Depending on the complexity of the app, it may incorporate real-time communication technologies like WebSocket to enable instant messaging between users and their robot friends.<br>
-                    5. User Profile: Users might have their profiles where they can customize their avatar, set preferences, or manage their friend list.<br>
-                    6. Robot Interaction: Users can interact with robot friends through a chat interface or by performing specific actions like sending virtual gifts, playing games, or sharing interesting facts.<br>
-                    7. Responsive Design: The app is designed to work seamlessly across various devices, including desktops, tablets, and smartphones, offering an optimized user experience.<br>
-                    8. Accessibility: Efforts are made to ensure the app adheres to accessibility standards, making it usable by people with disabilities.<br>
-                    9. Robot Animation: To enhance the user experience, the app may include animated robot avatars that react to user interactions, making the interaction more engaging and entertaining.<br>
-                    10. Backend Integration: The app may have a backend server that handles user authentication, database queries, and other server-side tasks to support the app's functionalities.<br><br>
                     Overall, the Robofriends React app aims to create an enjoyable and immersive environment where users can connect with virtual robot friends, fostering creativity, fun interactions, and a sense of companionship.
                   </p>
                 </div>
@@ -180,7 +169,8 @@
                 <h3 class="project-wrapper__text-title">Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Background Generator is a CSS linear-gradient generator to get a set of codes to implement the gradient that you wish.
+                    CSS Linear Gradient Background Generator is a web-based project that allows users to create and customize linear gradient backgrounds using CSS. This project is designed to provide a user-friendly interface that enables users to experiment with different color combinations and gradient styles to generate CSS code that can be easily copied and used in their own projects.<br><br>
+                    Overall, the CSS Linear Gradient Background Generator project aims to empower users with a simple yet powerful tool to create visually stunning and customizable linear gradient backgrounds for their websites or web applications.
                   </p>
                 </div>
                 <a
@@ -230,11 +220,8 @@
                 <h3 class="project-wrapper__text-title">SmartBrain</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    The Smart Brain project is an advanced computer vision application that leverages artificial intelligence and machine learning to detect and recognize human faces in images and videos. The primary goal of this project is to develop a sophisticated facial recognition system capable of accurately identifying individuals from visual data.<br><br>
+                    Overall, the Smart Brain project showcases the power of computer vision and AI technologies, offering a robust and versatile facial recognition system that can be applied in various industries, including security, marketing, customer service, and more. It demonstrates the potential for AI to enhance our lives through innovative and responsible applications.
                   </p>
                 </div>
                 <a
