--- a/src/index.html
+++ b/src/index.html
@@ -90,10 +90,10 @@
               </p>
               <span class="d-flex mt-3">
                 <a
-                  rel="noreferrer"
+                  rel="noreferrer noopener"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="https://docs.google.com/document/d/1ZNDGIfCnm6posYD2oKvElfM0qko9AWQS9rsGbnkwx7c/edit?usp=sharing"
                 >
                   View Resume
                 </a>
