--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Rey.</span>
+          Welcome to my Full-Stack Developer Portfolio! 
           <br />
-          I'm the Fullstack Engineer you need.
+          I'm <span class="text-color-main">Rey.</span>, a passionate and experienced full-stack developer with a strong focus on crafting innovative web applications. This portfolio showcases my skills, projects, and contributions to the tech community. I believe in building user-centric and scalable solutions using cutting-edge technologies. Below, you'll find a diverse range of projects that demonstrate my expertise in front-end, back-end, and database development.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
