modified index,hero,typography scss

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,7 @@
         <h1 class="hero-title load-hidden">
           Welcome to my Full-Stack Developer Portfolio! 
           <br /><br />
-          I'm <span class="text-color-main">Rey</span>, a passionate and experienced full-stack developer with a strong focus on crafting innovative web applications.<br><br>
-          This portfolio showcases my skills, projects, and contributions to the tech community.<br>
-          I believe in building user-centric and scalable solutions using cutting-edge technologies.<br> 
-          Below, you'll find a diverse range of projects that demonstrate my expertise in front-end, back-end, and database development.
+          I'm <span class="text-color-main">Rey</span>, a passionate and experienced full-stack developer with a strong focus on crafting innovative web applications.<br>
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
