--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Rey Villena Jr.] | Developer" />
+    <meta name="I'm Rey, a passionate and experienced full-stack developer with a strong focus on crafting innovative web applications." content="[Rey Villena Jr.] | Developer" />
 
     <link
       rel="stylesheet"
