--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
         <h1 class="hero-title load-hidden">
           Welcome to my Full-Stack Developer Portfolio! 
           <br /><br />
-          I'm <span class="text-color-main">Rey</span>, a passionate and experienced full-stack developer with a strong focus on crafting innovative web applications.<br>
+          My name is <span class="text-color-main">Rey</span>,<br> 
+          The Full-Stack Developer you need.<br>
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
