--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,8 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Welcome to my Full-Stack Developer Portfolio! 
+          Welcome to my <span class="text-color-main">Full-Stack</span> Developer Portfolio! 
           <br /><br />
-          My name is <span class="text-color-main">Rey</span>,<br> 
-          The Full-Stack Developer you need.<br>
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -82,7 +80,7 @@
               <p class="about-wrapper__info-text">
                 <!-- This is where you can describe about yourself. The more you
                 describe about yourself, the more chances you can! -->
-                I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Software Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
+                My name is Rey, I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Software Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
                 I have a proven track record of creating real-world applications & websites using various programming languages. These experiences have honed my ability to solve bugs & codes that are critical in order to run a business or organization. I am constantly seeking opportunities to enhance my skills and stay updated with the latest trends and advancements in my field. I believe in the power of continuous learning and strive to grow both professionally and personally. <br><br>
               </p>
               <p class="about-wrapper__info-text">
