--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,11 @@
           Welcome to my <span class="text-color-main">Full-Stack</span> Developer Portfolio! 
           <br /><br />
         </h1>
-        <p class="hero-cta load-hidden">
+        <!-- <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
             >Know more...</a
           >
-        </p>
+        </p> -->
       </div>
     </section>
     <!-- /END Hero Section -->
