--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Welcome to my <span class="text-color-main">Full-Stack</span> Developer Portfolio! 
+          Welcome to <span class="text-color-main">Rey's</span> Full-Stack Developer Portfolio! 
           <br /><br />
         </h1>
         <!-- <p class="hero-cta load-hidden">
