--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/Logo.png" />
 
     <!-- Todo: put here your site title -->
-    <title>Rey Villena Jr. | Fullstack Developer</title>
+    <title>Rey Jr.| Fullstack Engineer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,8 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Welcome to <span class="text-color-main">Rey's</span> Full-Stack Developer Portfolio! 
+          Welcome to <span class="text-color-main">Rey's</span> Full-Stack Engineer Portfolio! 
           <br /><br />
+          This site is still under full completion...
         </h1>
         <!-- <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -80,7 +81,7 @@
               <p class="about-wrapper__info-text">
                 <!-- This is where you can describe about yourself. The more you
                 describe about yourself, the more chances you can! -->
-                My name is Rey, I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Software Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
+                My name is Rey, I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Fullstack Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
                 I have a proven track record of creating real-world applications & websites using various programming languages. These experiences have honed my ability to solve bugs & codes that are critical in order to run a business or organization. I am constantly seeking opportunities to enhance my skills and stay updated with the latest trends and advancements in my field. I believe in the power of continuous learning and strive to grow both professionally and personally. <br><br>
               </p>
               <p class="about-wrapper__info-text">
