--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Welcome to <span class="text-color-main">Rey's</span> Full-Stack Engineer Portfolio! 
           <br /><br />
-          This site is still under full completion...
+          This site is still under full completion & real-time updates...
         </h1>
         <!-- <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
