--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Site's still under-construction...</a
+            >Site's stunder-construction...</a
           >
         </p>
       </div>
