modified jumbotron & button

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,8 @@
           <br /><br />
         </h1>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Site's under full-completion...</a
-          >
+          <a rel="noreferrer noopener" class="cta-btn cta-btn--hero" href="#about">
+            Site's under full-completion...</a>
         </p>
       </div>
     </section>
