--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer noopener" class="cta-btn cta-btn--hero" href="#about">
-            Site's under full-completion...</a>
+            Under Full-Completion...</a>
         </p>
       </div>
     </section>
