modified index, buttons & hero.scss

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer noopener" class="cta-btn cta-btn--hero" href="#about">
-            Under-construction...</a>
+            See More...>
+          </a>
         </p>
       </div>
     </section>
