modified index, buttons & hero.scss

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,8 @@
           <br /><br />
         </h1>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer noopener" class="cta-btn cta-btn--hero" href="#about">
-            See More...>
-          </a>
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
+            See More...</a>
         </p>
       </div>
     </section>
