modified index.html & buttons

--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,10 @@
           Welcome to <span class="text-color-main">Rey's</span> Full-Stack Engineer Portfolio! 
           <br /><br />
         </h1>
-        <p class="hero-cta load-hidden">
+        <!-- <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
             See More...</a>
-        </p>
+        </p> -->
       </div>
     </section>
     <!-- /END Hero Section -->
