modified video bg

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,11 @@
     <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
       <div class="container">
+
+        <video autoplay loop muted plays-inline class="back-video">
+            <source src="/src/assets/videospace.mp4" type="video/mp4">
+        </video>
+        
         <h1 class="hero-title load-hidden">
           Welcome to <span class="text-color-main">Rey's</span> Full-Stack Engineer Portfolio! 
           <br /><br />
