modified video bg

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <section id="hero" class="jumbotron">
       <div class="container">
 
-        <video autoplay loop muted plays-inline class="back-video">
+        <video autoplay loop muted playsinline class="back-video">
             <source src="/src/assets/videospace.mp4" type="video/mp4">
         </video>
         
