--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </video>
         
         <h1 class="hero-title load-hidden">
-          Welcome to <span class="text-color-main">Rey's</span> Full-Stack Engineer Portfolio! 
+          Welcome to my <span class="text-color-main">Full-Stack</span> Developer Portfolio! 
           <br /><br />
         </h1>
         <p class="hero-cta load-hidden">
