modified hero title

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/Logo.png" />
 
     <!-- Todo: put here your site title -->
-    <title>Rey Jr.| Fullstack Engineer</title>
+    <title>Fullstack Engineering | Portfolio</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
