--- a/src/index.html
+++ b/src/index.html
@@ -276,15 +276,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Contact Us Here]</p>
+          <p class="contact-wrapper__text">Click Below to Inquire</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:example@email.com"
-            >Inquire Here</a
-          >
-        </div>
+            >Contact Me</a>
       </div>
     </section>
     <!-- /END Contact Section -->
