--- a/src/index.html
+++ b/src/index.html
@@ -277,15 +277,15 @@
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Contact Form</h2>
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">Click Below to Inquire</p>
           <a
-            rel="noreferrer"
+            rel="noreferrer noopener"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="http://eepurl.com/dDNl0T"
-            >Message</a>
+            >Message Us</a>
       </div>
     </section>
     <!-- /END Contact Section -->
