changed hero button

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
-            Under Full-Completion...</a>
+            Under Full-Construction...</a>
         </p>
       </div>
     </section>
