added on-going message to smartbrain

--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,8 @@
                 <div>
                   <p class="mb-4">
                     The Smart Brain project is an advanced computer vision application that leverages artificial intelligence and machine learning to detect and recognize human faces in images and videos. The primary goal of this project is to develop a sophisticated facial recognition system capable of accurately identifying individuals from visual data.<br><br>
-                    Overall, the Smart Brain project showcases the power of computer vision and AI technologies, offering a robust and versatile facial recognition system that can be applied in various industries, including security, marketing, customer service, and more. It demonstrates the potential for AI to enhance our lives through innovative and responsible applications.
+                    Overall, the Smart Brain project showcases the power of computer vision and AI technologies, offering a robust and versatile facial recognition system that can be applied in various industries, including security, marketing, customer service, and more. It demonstrates the potential for AI to enhance our lives through innovative and responsible applications.<br><br>
+                    This project is still on-going...
                   </p>
                 </div>
                 <a
