--- a/src/index.html
+++ b/src/index.html
@@ -277,13 +277,13 @@
       <div class="container">
         <h2 class="section-title">Contact Form</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Click Below to Inquire</p>
+          <p class="contact-wrapper__text">Please click below to reach out to us.</p>
           <a
             rel="noreferrer noopener"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="http://eepurl.com/dDNl0T"
-            >Message Us</a>
+            >Send a Brief Message</a>
       </div>
     </section>
     <!-- /END Contact Section -->
