modified hero bg

--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,7 @@
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact Form</h2>
+        <h2 class="section-title">Contact Us</h2>
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">Please click below to reach out to us.</p>
           <a
