--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/Logo.png" />
 
     <!-- Todo: put here your site title -->
-    <title>Fullstack Engineering | Portfolio</title>
+    <title>Fullstack Developer | Portfolio</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="javascript" content="[reyvillenajr], [Rey], Fullstack Development" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -84,7 +84,7 @@
               <p class="about-wrapper__info-text">
                 <!-- This is where you can describe about yourself. The more you
                 describe about yourself, the more chances you can! -->
-                My name is Rey, I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Fullstack Engineering. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
+                My name is Rey, I am a passionate and dedicated individual with a strong background in Fullstack Development. Throughout my career, I have developed a deep interest & expertise in HTML, CSS, JavaScript, Node.js, React, etc. My goal is to make a positive impact and contribute to the advancement of Fullstack Development. I thrive in dynamic and collaborative environments, and I am always eager to take on new challenges that push my limits and allow me to expand my knowledge and skills.<br><br>
                 I have a proven track record of creating real-world applications & websites using various programming languages. These experiences have honed my ability to solve bugs & codes that are critical in order to run a business or organization. I am constantly seeking opportunities to enhance my skills and stay updated with the latest trends and advancements in my field. I believe in the power of continuous learning and strive to grow both professionally and personally. <br><br>
               </p>
               <p class="about-wrapper__info-text">
@@ -122,7 +122,7 @@
                 <div>
                   <p class="mb-4">
                     Robofriends React app is a web application designed to create an interactive and fun experience for users by allowing them to search and connect with virtual robot friends. The app is built using React, a popular JavaScript library for building user interfaces, and it leverages APIs to fetch and display robot data dynamically.<br><br>
-                    Overall, the Robofriends React app aims to create an enjoyable and immersive environment where users can connect with virtual robot friends, fostering creativity, fun interactions, and a sense of companionship.
+                    <!-- Overall, the Robofriends React app aims to create an enjoyable and immersive environment where users can connect with virtual robot friends, fostering creativity, fun interactions, and a sense of companionship. -->
                   </p>
                 </div>
                 <a
@@ -173,7 +173,7 @@
                 <div>
                   <p class="mb-4">
                     CSS Linear Gradient Background Generator is a web-based project that allows users to create and customize linear gradient backgrounds using CSS. This project is designed to provide a user-friendly interface that enables users to experiment with different color combinations and gradient styles to generate CSS code that can be easily copied and used in their own projects.<br><br>
-                    Overall, the CSS Linear Gradient Background Generator project aims to empower users with a simple yet powerful tool to create visually stunning and customizable linear gradient backgrounds for their websites or web applications.
+                    <!-- Overall, the CSS Linear Gradient Background Generator project aims to empower users with a simple yet powerful tool to create visually stunning and customizable linear gradient backgrounds for their websites or web applications. -->
                   </p>
                 </div>
                 <a
@@ -224,7 +224,7 @@
                 <div>
                   <p class="mb-4">
                     The Smart Brain project is an advanced computer vision application that leverages artificial intelligence and machine learning to detect and recognize human faces in images and videos. The primary goal of this project is to develop a sophisticated facial recognition system capable of accurately identifying individuals from visual data.<br><br>
-                    Overall, the Smart Brain project showcases the power of computer vision and AI technologies, offering a robust and versatile facial recognition system that can be applied in various industries, including security, marketing, customer service, and more. It demonstrates the potential for AI to enhance our lives through innovative and responsible applications.<br><br>
+                    <!-- Overall, the Smart Brain project showcases the power of computer vision and AI technologies, offering a robust and versatile facial recognition system that can be applied in various industries, including security, marketing, customer service, and more. It demonstrates the potential for AI to enhance our lives through innovative and responsible applications.<br><br> -->
                     This project is still on-going...
                   </p>
                 </div>
