--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                   rel="noreferrer noopener"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="https://docs.google.com/document/d/1ZNDGIfCnm6posYD2oKvElfM0qko9AWQS9rsGbnkwx7c/edit?usp=sharing"
+                  href="https://docs.google.com/document/d/155G5P2j0t--JNB3UI1dWycsAxh_GIU1Ar3T8D9F4tmo/edit?usp=sharing"
                 >
                   View Resume
                 </a>
@@ -283,7 +283,7 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="http://eepurl.com/dDNl0T"
-            >Send a Brief Message</a>
+            >Send a Brief Message.</a>
       </div>
     </section>
     <!-- /END Contact Section -->
